// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render correctly 1`] = `
<div>
  <h1
    className="stncl__name"
  >
    Test
  </h1>
  <span
    className="stncl__status stncl__status--ready"
  >
    Ready
  </span>
  <section
    className="stncl__description"
  >
    Just a simple test component
  </section>
  <div
    className="stncl__preview"
    style={null}
  >
    <div>
      Just a test
    </div>
  </div>
  <section>
    <h2
      className="stncl__title"
    >
      Examples
    </h2>
    <div
      className="stncl__dropdown"
    >
      <select
        className="stncl__dropdown__select"
        onChange={[Function]}
        value={undefined}
      >
        <option>
          Basic example
        </option>
      </select>
      <div
        className="stncl__dropdown__arrow"
      />
    </div>
  </section>
  <section>
    <h2>
      Notes
    </h2>
    <div>
      <h3>
        Developer notes
      </h3>
      I am just a string
    </div>
    <div>
      <h3>
        Designer notes
      </h3>
      <div>
        I use a component
      </div>
    </div>
  </section>
</div>
`;

exports[`it should render correctly without a description 1`] = `
<div>
  <h1
    className="stncl__name"
  >
    Test
  </h1>
  <span
    className="stncl__status stncl__status--ready"
  >
    Ready
  </span>
  <div
    className="stncl__preview"
    style={null}
  >
    <div>
      Just a test
    </div>
  </div>
  <section>
    <h2
      className="stncl__title"
    >
      Examples
    </h2>
    <div
      className="stncl__dropdown"
    >
      <select
        className="stncl__dropdown__select"
        onChange={[Function]}
        value={undefined}
      >
        <option>
          Basic example
        </option>
      </select>
      <div
        className="stncl__dropdown__arrow"
      />
    </div>
  </section>
  <section>
    <h2>
      Notes
    </h2>
    <div>
      <h3>
        Developer notes
      </h3>
      I am just a string
    </div>
    <div>
      <h3>
        Designer notes
      </h3>
      <div>
        I use a component
      </div>
    </div>
  </section>
</div>
`;

exports[`it should render correctly without a examples 1`] = `
<div>
  <h1
    className="stncl__name"
  >
    Test
  </h1>
  <span
    className="stncl__status stncl__status--ready"
  >
    Ready
  </span>
  <section
    className="stncl__description"
  >
    Just a simple test component
  </section>
  <div
    className="stncl__preview"
    style={null}
  >
    <div>
      Just a test
    </div>
  </div>
  <section>
    <h2>
      Notes
    </h2>
    <div>
      <h3>
        Developer notes
      </h3>
      I am just a string
    </div>
    <div>
      <h3>
        Designer notes
      </h3>
      <div>
        I use a component
      </div>
    </div>
  </section>
</div>
`;

exports[`it should render correctly without a notes 1`] = `
<div>
  <h1
    className="stncl__name"
  >
    Test
  </h1>
  <span
    className="stncl__status stncl__status--ready"
  >
    Ready
  </span>
  <section
    className="stncl__description"
  >
    Just a simple test component
  </section>
  <div
    className="stncl__preview"
    style={null}
  >
    <div>
      Just a test
    </div>
  </div>
  <section>
    <h2
      className="stncl__title"
    >
      Examples
    </h2>
    <div
      className="stncl__dropdown"
    >
      <select
        className="stncl__dropdown__select"
        onChange={[Function]}
        value={undefined}
      >
        <option>
          Basic example
        </option>
      </select>
      <div
        className="stncl__dropdown__arrow"
      />
    </div>
  </section>
</div>
`;

exports[`it should render correctly without a status 1`] = `
<div>
  <h1
    className="stncl__name"
  >
    Test
  </h1>
  <section
    className="stncl__description"
  >
    Just a simple test component
  </section>
  <div
    className="stncl__preview"
    style={null}
  >
    <div>
      Just a test
    </div>
  </div>
  <section>
    <h2
      className="stncl__title"
    >
      Examples
    </h2>
    <div
      className="stncl__dropdown"
    >
      <select
        className="stncl__dropdown__select"
        onChange={[Function]}
        value={undefined}
      >
        <option>
          Basic example
        </option>
      </select>
      <div
        className="stncl__dropdown__arrow"
      />
    </div>
  </section>
  <section>
    <h2>
      Notes
    </h2>
    <div>
      <h3>
        Developer notes
      </h3>
      I am just a string
    </div>
    <div>
      <h3>
        Designer notes
      </h3>
      <div>
        I use a component
      </div>
    </div>
  </section>
</div>
`;

exports[`it should render correctly without a swatches 1`] = `
<div>
  <h1
    className="stncl__name"
  >
    Test
  </h1>
  <span
    className="stncl__status stncl__status--ready"
  >
    Ready
  </span>
  <section
    className="stncl__description"
  >
    Just a simple test component
  </section>
  <div
    className="stncl__preview"
    style={null}
  >
    <div>
      Just a test
    </div>
  </div>
  <section>
    <h2
      className="stncl__title"
    >
      Examples
    </h2>
    <div
      className="stncl__dropdown"
    >
      <select
        className="stncl__dropdown__select"
        onChange={[Function]}
        value={undefined}
      >
        <option>
          Basic example
        </option>
      </select>
      <div
        className="stncl__dropdown__arrow"
      />
    </div>
  </section>
  <section>
    <h2>
      Notes
    </h2>
    <div>
      <h3>
        Developer notes
      </h3>
      I am just a string
    </div>
    <div>
      <h3>
        Designer notes
      </h3>
      <div>
        I use a component
      </div>
    </div>
  </section>
</div>
`;
